--- a/tools/package.json
+++ b/tools/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "csv-parse": "^1.1.7",
+    "moment": "^2.22.2",
     "mysql": "^2.12.0",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5"
