--- a/tools/package.json
+++ b/tools/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "csv-parse": "^1.1.7",
+    "jest": "^23.0.0",
     "moment": "^2.22.2",
     "mysql": "^2.12.0",
     "request": "^2.85.0",
